--- a/app/src/main/res/layout/activity_subcategory.xml
+++ b/app/src/main/res/layout/activity_subcategory.xml
@@ -7,36 +7,37 @@
     android:layout_height="match_parent"
     tools:context=".activities.SubcategoryActivity">
 
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="#03A9F4"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@android:color/white"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageView
             android:id="@+id/backArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/baseline_arrow_back_24"
+            android:layout_gravity="start"
             android:contentDescription="Back"
             android:padding="12dp"
-            android:layout_gravity="start" />
+            android:src="@drawable/baseline_arrow_back_24" />
 
         <TextView
             android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Category"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
             android:layout_gravity="center"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginStart="16dp"
+            android:text="Category"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
     </androidx.appcompat.widget.Toolbar>
-
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
