--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#419FE9"
-            android:text="CheckOut"
+            android:text="Go To Cart"
             android:textSize="30dp"
             android:textStyle="bold"
             android:textAlignment="center"
